Prevent preview popup from being triggered while context menus are open (#8635)
Added an invisible background blocker when context menus are open that prevents other mouse events from being triggered.

Also renamed the data-test-sourceid attribute to data-test-source-id while I was in here, because I noticed the inconsistency and it was bugging me.

--- a/packages/replay-next/components/context-menu/ContextMenu.module.css
+++ b/packages/replay-next/components/context-menu/ContextMenu.module.css
@@ -1,3 +1,12 @@
+.Backdrop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 25; /* Higher than preview popup */
+}
+
 .ContextMenu {
   position: absolute;
   flex-direction: column;
@@ -5,7 +14,6 @@
   border-radius: 0.5rem;
   overflow: hidden;
   white-space: nowrap;
-  z-index: 25; /* Higher than preview popup */
   filter: drop-shadow(1px 2px 3px rgba(0, 0, 0, 0.5));
   padding: 0.25rem 0;
   background-color: var(--context-menu-bgcolor);
